# astro-post-audit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  rules.toml
.github/workflows/: ci.yml  release.yml
crates/astro-post-audit/: Cargo.toml
crates/astro-post-audit/src/: baseline.rs  hints.rs  main.rs
crates/astro-post-audit/src/checks/: a11y.rs  ai_visibility.rs  assets.rs  content_quality.rs  content_sync.rs  crawl_budget.rs  external_links.rs  golive.rs  headings.rs  hreflang.rs  html_basics.rs  html_validation.rs  i18n_audit.rs  images.rs  js_bloat.rs  links.rs  mod.rs  opengraph.rs  privacy_security.rs  redirects.rs  render_blocking.rs  robots_txt.rs  security.rs  seo.rs  sitemap.rs  structured_data.rs  structured_data_graph.rs  ux_heuristics.rs
crates/astro-post-audit/src/config/: mod.rs
crates/astro-post-audit/src/discovery/: mod.rs
crates/astro-post-audit/src/normalize/: mod.rs
crates/astro-post-audit/src/overview/: mod.rs
crates/astro-post-audit/src/report/: mod.rs
crates/astro-post-audit/tests/: common.rs  integration.rs
npm/: package.json
npm/src/: index.ts  integration.ts
tests/fixtures/: config-parity.json
tests/fixtures/bad/: index.html
tests/fixtures/edge-cases/: a11y-edge.html  headings-complex.html  long-title.html  malformed.html  minimal.html  multiple-canonicals.html  no-doctype.html  noindex.html  opengraph.html  security-issues.html  structured-data.html
tests/fixtures/edge-cases/about/: index.html
tests/fixtures/good/: index.html
tests/fixtures/good/about/: index.html
(+1 files in other folders)
